@@ -146,6 +146,24 @@ name|NAME
 init|=
 literal|"response"
 decl_stmt|;
+DECL|field|RESPONSE_HEADER_KEY
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|RESPONSE_HEADER_KEY
+init|=
+literal|"responseHeader"
+decl_stmt|;
+DECL|field|RESPONSE_KEY
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|RESPONSE_KEY
+init|=
+literal|"response"
+decl_stmt|;
 comment|/**    * Container for user defined values    * @see #getValues    * @see #add    * @see #setAllValues    * @see<a href="#returnable_data">Note on Returnable Data</a>    */
 DECL|field|values
 specifier|protected
@@ -333,6 +351,44 @@ return|return
 name|err
 return|;
 block|}
+comment|/** Set response header */
+DECL|method|addResponseHeader
+specifier|public
+name|void
+name|addResponseHeader
+parameter_list|(
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+name|header
+parameter_list|)
+block|{
+name|values
+operator|.
+name|add
+argument_list|(
+name|RESPONSE_HEADER_KEY
+argument_list|,
+name|header
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** Clear response header */
+DECL|method|removeResponseHeader
+specifier|public
+name|void
+name|removeResponseHeader
+parameter_list|()
+block|{
+name|values
+operator|.
+name|remove
+argument_list|(
+name|RESPONSE_HEADER_KEY
+argument_list|)
+expr_stmt|;
+block|}
 comment|/** Response header to be logged */
 DECL|method|getResponseHeader
 specifier|public
@@ -364,11 +420,47 @@ name|values
 operator|.
 name|get
 argument_list|(
-literal|"responseHeader"
+name|RESPONSE_HEADER_KEY
 argument_list|)
 decl_stmt|;
 return|return
 name|header
+return|;
+block|}
+comment|/** Set response */
+DECL|method|addResponse
+specifier|public
+name|void
+name|addResponse
+parameter_list|(
+name|Object
+name|response
+parameter_list|)
+block|{
+name|values
+operator|.
+name|add
+argument_list|(
+name|RESPONSE_KEY
+argument_list|,
+name|response
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** Return response */
+DECL|method|getResponse
+specifier|public
+name|Object
+name|getResponse
+parameter_list|()
+block|{
+return|return
+name|values
+operator|.
+name|get
+argument_list|(
+name|RESPONSE_KEY
+argument_list|)
 return|;
 block|}
 comment|/** Add a value to be logged.    *     * @param name name of the thing to log    * @param val value of the thing to log    */
