@@ -397,6 +397,90 @@ block|}
 block|}
 annotation|@
 name|Test
+DECL|method|testResponse
+specifier|public
+name|void
+name|testResponse
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|SolrQueryResponse
+name|response
+init|=
+operator|new
+name|SolrQueryResponse
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"response initial value"
+argument_list|,
+literal|null
+argument_list|,
+name|response
+operator|.
+name|getResponse
+argument_list|()
+argument_list|)
+expr_stmt|;
+specifier|final
+name|Object
+name|newValue
+init|=
+operator|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|?
+operator|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|?
+operator|new
+name|String
+argument_list|(
+literal|"answer"
+argument_list|)
+else|:
+operator|new
+name|Integer
+argument_list|(
+literal|42
+argument_list|)
+operator|)
+else|:
+literal|null
+operator|)
+decl_stmt|;
+name|response
+operator|.
+name|addResponse
+argument_list|(
+name|newValue
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"response new value"
+argument_list|,
+name|newValue
+argument_list|,
+name|response
+operator|.
+name|getResponse
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testToLog
 specifier|public
 name|void
@@ -1892,6 +1976,103 @@ argument_list|,
 name|response
 operator|.
 name|getException
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testResponseHeader
+specifier|public
+name|void
+name|testResponseHeader
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|SolrQueryResponse
+name|response
+init|=
+operator|new
+name|SolrQueryResponse
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"responseHeader initially present"
+argument_list|,
+literal|null
+argument_list|,
+name|response
+operator|.
+name|getResponseHeader
+argument_list|()
+argument_list|)
+expr_stmt|;
+specifier|final
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+name|newValue
+init|=
+operator|new
+name|SimpleOrderedMap
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|newValue
+operator|.
+name|add
+argument_list|(
+literal|"key1"
+argument_list|,
+literal|"value1"
+argument_list|)
+expr_stmt|;
+name|response
+operator|.
+name|add
+argument_list|(
+literal|"key2"
+argument_list|,
+literal|"value2"
+argument_list|)
+expr_stmt|;
+name|response
+operator|.
+name|addResponseHeader
+argument_list|(
+name|newValue
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"responseHeader new value"
+argument_list|,
+name|newValue
+argument_list|,
+name|response
+operator|.
+name|getResponseHeader
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|response
+operator|.
+name|removeResponseHeader
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"responseHeader removed value"
+argument_list|,
+literal|null
+argument_list|,
+name|response
+operator|.
+name|getResponseHeader
 argument_list|()
 argument_list|)
 expr_stmt|;
